fix(quasar): Z-index changes for menu and enhance click-outside detection

--- a/quasar/src/components/menu/menu.styl
+++ b/quasar/src/components/menu/menu.styl
@@ -6,14 +6,15 @@
   overflow-x hidden
   outline 0
   max-height 65vh
-  z-index $z-menu
 
 .q-menu
+  z-index $z-menu
   position fixed !important
   display inline-block
   max-width $menu-max-width
 
 .q-local-menu
+  z-index $z-local-menu
   cursor default
   position absolute
   color initial
